After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 649214 - deal with non-attached master devices
deal with non-attached master devices
Status: RESOLVED FIXED
Product: gnome-settings-daemon
Classification: Core
Component: mouse
unspecified
Other Linux
: Normal normal
: ---
Assigned To: gnome-settings-daemon-maint
gnome-settings-daemon-maint
Depends on:
Blocks:
 
 
Reported: 2011-05-02 17:45 UTC by Matthias Clasen
Modified: 2011-05-03 16:18 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
patch (2.40 KB, patch)
2011-05-02 18:54 UTC, Matthias Clasen
committed Details | Review

Description Matthias Clasen 2011-05-02 17:45:58 UTC
If you call xinput create-master foo, g-s-d crashes.

Original report: https://bugzilla.redhat.com/show_bug.cgi?id=700519

Looking at the code,

it crashes inside device_is_touchpad() because open_gdk_device() returns NULL in this case. set_left_handed() already has a NULL check after open_gdk_device(). Looks like all other callers need the same treatment.
Comment 1 Matthias Clasen 2011-05-02 18:54:21 UTC
Created attachment 187072 [details] [review]
patch
Comment 2 Bastien Nocera 2011-05-03 16:18:17 UTC
Pushed in gnome-3-0 and master