Don't pass NULL to device_is_touchpad

It can't handle it...
https://bugzilla.gnome.org/show_bug.cgi?id=649214