plugins/mouse/gsd-mouse-manager.c
@@ -406,13 +406,13 @@ set_motion (GsdMouseManager *manager,
         guint i;
 
         xdevice = open_gdk_device (device);
+        if (xdevice == NULL)
+                return;
+
         if (device_is_touchpad (xdevice))
                 settings = manager->priv->touchpad_settings;
         else
                 settings = manager->priv->mouse_settings;
-
-        if (xdevice == NULL)
-                return;
 
         /* Calculate acceleration */
         motion_acceleration = g_settings_get_double (settings, KEY_MOTION_ACCELERATION);
@@ -576,6 +576,8 @@ set_tap_to_click (GdkDevice *device,
                 return;
 
         xdevice = open_gdk_device (device);
+        if (xdevice == NULL)
+                return;
 
         if (!device_is_touchpad (xdevice)) {
                 XCloseDevice (GDK_DISPLAY_XDISPLAY (gdk_display_get_default ()), xdevice);
@@ -622,6 +624,8 @@ set_horiz_scroll (GdkDevice *device,
                 return;
 
         xdevice = open_gdk_device (device);
+        if (xdevice == NULL)
+                return;
 
         if (!device_is_touchpad (xdevice)) {
                 XCloseDevice (GDK_DISPLAY_XDISPLAY (gdk_display_get_default ()), xdevice);
@@ -680,6 +684,8 @@ set_edge_scroll (GdkDevice               *device,
                 return;
 
         xdevice = open_gdk_device (device);
+        if (xdevice == NULL)
+                return;
 
         if (!device_is_touchpad (xdevice)) {
                 XCloseDevice (GDK_DISPLAY_XDISPLAY (gdk_display_get_default ()), xdevice);
@@ -734,6 +740,8 @@ set_touchpad_enabled (GdkDevice *device,
                 return;
 
         xdevice = open_gdk_device (device);
+        if (xdevice == NULL)
+                return;
 
         if (!device_is_touchpad (xdevice)) {
                 XCloseDevice (GDK_DISPLAY_XDISPLAY (gdk_display_get_default ()), xdevice);
